# ser-esp-core

./: Cargo.toml
.cargo/: config.toml
blinky/: Cargo.toml  diagram.json
blinky/src/: main.rs
button-controlled-blinky/: Cargo.toml  diagram.json
button-controlled-blinky/src/: main.rs
button-counter/: Cargo.toml  diagram.json
button-counter/src/: main.rs
calculator/: Cargo.toml  diagram.json
calculator/src/: main.rs
simple-voltmeter/: Cargo.toml  diagram.json
simple-voltmeter/src/: main.rs
temperature-sensing/: Cargo.toml  diagram.json
temperature-sensing-led-bar/: Cargo.toml
temperature-sensing-led-bar/src/: main.rs
temperature-sensing-led-row/: Cargo.toml  diagram.json
temperature-sensing/src/: main.rs
